platter-compiler-sveltejs/static/python/tests/syntax_programs/invalid_tests/flag_issue_invalid_1.platter
flag of a = up == 1 == a;

start(){}